--- a/index.html
+++ b/index.html
@@ -1,12 +1,173 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Webpack App</title>
-    </head>
-    <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
-    </body>
-    
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>Afrianska</title>
+</head>
+
+<body>
+    <div class="hero">
+        <div class="hero__container-header">
+            <header class="hero__header">
+                <div class="hero__logo">
+                    <a href="#"><img src="./assets/logo.svg" alt="header-logo"></a>
+                </div>
+                <div class="header__burger">
+                    <a href="#"><img src="./assets/burger.svg" alt="header-burger"></a>
+                </div>
+            </header>
+        </div>
+        <div class="hero__container-main">
+            <div class="hero__main">
+                <h1 class="hero__title">
+                    New Automation Tool for Your Home
+                </h1>
+                <p class="hero__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.
+                </p>
+                <div class="hero__btn">
+                    <a href="#" class="hero__btn__link">
+                            See Our Project
+                    </a>
+                </div>
+                <div class="hero__img"><img src="./assets/mainIllustration.png" alt="afrian-img"></div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="suggestion">
+        <div class="suggestion__container">
+            <p class="suggestion__text">What we do to help our client grow in digital era</p>
+            <div class="suggestion__cards">
+                <div class="suggestion__card suggestion__card--1">
+                    <img class="suggestion__card__img" src="./assets/card1.png" alt="card1">
+                    <h3 class="suggestion__card__title">
+                        Make Your business To Be Better Famous In Internet
+                    </h3>
+                    <p class="suggestion__card__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                    <div class="suggestion__card__link">
+                        <a href="#">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="suggestion__card suggestion__card--2">
+                    <img class="suggestion__card__img" src="./assets/card2.png" alt="card2">
+                    <h3 class="suggestion__card__title">
+                        Bring Technology To Your Comfrotable Home
+                    </h3>
+                    <p class="suggestion__card__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                    <div class="suggestion__card__link">
+                        <a href="#">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="suggestion__card suggestion__card--3">
+                    <img class="suggestion__card__img" src="./assets/card3.png" alt="card3">
+                    <h3 class="suggestion__card__title">
+                        Build Your Digital Product That Suitable For Your Need
+                    </h3>
+                    <p class="suggestion__card__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                    <div class="suggestion__card__link">
+                        <a href="#">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="client">
+        <div class="client__container">
+            <div class="client__box">
+                <h2 class="client__title">
+                    Our Beloved Client
+                </h2>
+                <p class="client__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+            </div>
+            <table class="client__table">
+                <tr>
+                    <td>LOGO CLIENT 1</td>
+                    <td>LOGO CLIENT 2</td>
+                    <td>LOGO CLIENT 3</td>
+                    <td>LOGO CLIENT 4</td>
+                </tr>
+                <tr>
+                    <td>LOGO CLIENT 5</td>
+                    <td>LOGO CLIENT 6</td>
+                    <td>LOGO CLIENT 7</td>
+                    <td>
+                        <p>More Client</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+    <div class="bottom">
+        <div class="bottom__wrapper">
+            <div class="work">
+                <div class="work__container">
+                    <div class="work__team">
+                        <div class="work__info">
+                            <h2 class="work__title">Intersted to work with our team?</h2>
+                            <p class="work__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        </div>
+                        <div class="work__btn">
+                            <a href="#" class="work__btn__link">Let’s Talk</a>
+                        </div>
+                    </div>
+                    <div class="work__line"></div>
+                </div>
+            </div>
+            <footer class="footer">
+                <div class="footer__container">
+                    <div class="footer__menu">
+                        <div class="footer__afrianska">
+                            <h3 class="footer__afrianska__title">Afrianska</h3>
+                            <ul>
+                                <li>A. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                <li>T. +62-812-7313-4321</li>
+                                <li>E hello.afrian@gmail.com</li>
+                            </ul>
+                        </div>
+                        <div class="footer__about">
+                            <h3 class="footer__about__title">About US</h3>
+                            <ul>
+                                <li>About</li>
+                                <li>What We Do</li>
+                                <li>Project</li>
+                                <li>How It Work With Us</li>
+                            </ul>
+                        </div>
+                        <div class="footer__follow">
+                            <h3 class="footer__follow__title">About US</h3>
+                            <ul>
+                                <li>About</li>
+                                <li>What We Do</li>
+                                <li>Project</li>
+                                <li>How It Work With Us</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
+
+</body>
+
 </html>
