Поправила верстку под scss

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                         <div class="footer__afrianska">
                             <h3 class="footer__afrianska__title">Afrianska</h3>
                             <ul>
-                                <li>A. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                <li>T. +62-812-7313-4321</li>
-                                <li>E hello.afrian@gmail.com</li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                <li>+62-812-7313-4321</li>
+                                <li>hello.afrian@gmail.com</li>
                             </ul>
                         </div>
                         <div class="footer__about">
@@ -154,14 +154,17 @@
                             </ul>
                         </div>
                         <div class="footer__follow">
-                            <h3 class="footer__follow__title">About US</h3>
+                            <h3 class="footer__follow__title">Follow Us</h3>
                             <ul>
-                                <li>About</li>
-                                <li>What We Do</li>
-                                <li>Project</li>
-                                <li>How It Work With Us</li>
+                                <li>Instagram</li>
+                                <li>Facebook</li>
+                                <li>LinkedIn</li>
+                                <li>Youtube</li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="footer__copyright">
+                        <p>2019 © Afrianska. All rights reserved.</p>
                     </div>
                 </div>
             </footer>
