--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
                     <td>LOGO CLIENT 5</td>
                     <td>LOGO CLIENT 6</td>
                     <td>LOGO CLIENT 7</td>
-                    <td>
-                        <p>More Client</p>
-                    </td>
+                    <td>More Client </td>
                 </tr>
             </table>
         </div>
