--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             See Our Project
                     </a>
                 </div>
-                <div class="hero__img"><img src="./assets/mainIllustration.png" alt="afrian-img"></div>
+                <div class="hero__img"><img src="./assets/mainIllustration.png" alt="afrian-img" width="687" height="612"></div>
             </div>
         </div>
 
@@ -98,20 +98,16 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                 </p>
             </div>
-            <table class="client__table">
-                <tr>
-                    <td>LOGO CLIENT 1</td>
-                    <td>LOGO CLIENT 2</td>
-                    <td>LOGO CLIENT 3</td>
-                    <td>LOGO CLIENT 4</td>
-                </tr>
-                <tr>
-                    <td>LOGO CLIENT 5</td>
-                    <td>LOGO CLIENT 6</td>
-                    <td>LOGO CLIENT 7</td>
-                    <td>More Client </td>
-                </tr>
-            </table>
+            <div class="client__table">
+                <div>LOGO CLIENT 1</div>
+                <div>LOGO CLIENT 2</div>
+                <div>LOGO CLIENT 3</div>
+                <div>LOGO CLIENT 4</div>
+                <div>LOGO CLIENT 5</div>
+                <div>LOGO CLIENT 6</div>
+                <div>LOGO CLIENT 7</div>
+                <div>More Client</div>
+            </div>
         </div>
     </div>
 
