--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                             <a href="#" class="work__btn__link">Let’s Talk</a>
                         </div>
                     </div>
-                    <div class="work__line"></div>
                 </div>
             </div>
+            <div class="line"></div>
             <footer class="footer">
                 <div class="footer__container">
                     <div class="footer__menu">
