--- a/index.html
+++ b/index.html
@@ -165,6 +165,38 @@
         </div>
     </div>
 
+    <div class="modal" id="jsModal">
+        <div class="modal__body">
+            <div class="modal__content">
+                <button class="modal__close">&#10005</button>
+                <div class="form__container">
+                    <div class="form__title">
+                        <h2>SEND US MESSAGE</h2>
+                    </div>
+                    <form action="index.html" class="form-box" method="post" id="form">
+                        <div class="form-input">
+                            <div class="form-input-item">
+                                <label for="username" class="label"> Full Name</label>
+                                <input type="text" name="username" placeholder="Your Name" id="username">
+                            </div>
+                            <div class="form-input-item">
+                                <label for="email" class="label"> Email</label>
+                                <input type="text" name="telephone" placeholder="Номер телефона" id="tel">
+                            </div>
+                            <div class="form-input-item">
+                                <label for="message" class="label"> Message</label>
+                                <textarea rows="7" name="message" id="message" placeholder="Your Message"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-button">
+                            <button type="submit" class="form-btn" value="SUBMIT">SUBMIT</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
