Изменила теги на семантические

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="hero">
+    <section class="hero">
         <div class="hero__container-header">
             <header class="hero__header">
                 <div class="hero__logo">
@@ -36,13 +36,13 @@
             </div>
         </div>
 
-    </div>
+    </section>
 
-    <div class="suggestion">
+    <section class="suggestion">
         <div class="suggestion__container">
-            <p class="suggestion__text">What we do to help our client grow in digital era</p>
+            <h2 class="suggestion__text">What we do to help our client grow in digital era</h2>
             <div class="suggestion__cards">
-                <div class="suggestion__card suggestion__card--1">
+                <section class="suggestion__card suggestion__card--1">
                     <img class="suggestion__card__img" src="./assets/card1.png" alt="card1">
                     <h3 class="suggestion__card__title">
                         Make Your business To Be Better Famous In Internet
@@ -55,8 +55,8 @@
                             Learn more
                         </a>
                     </div>
-                </div>
-                <div class="suggestion__card suggestion__card--2">
+                </section>
+                <section class="suggestion__card suggestion__card--2">
                     <img class="suggestion__card__img" src="./assets/card2.png" alt="card2">
                     <h3 class="suggestion__card__title">
                         Bring Technology To Your Comfrotable Home
@@ -69,8 +69,8 @@
                             Learn more
                         </a>
                     </div>
-                </div>
-                <div class="suggestion__card suggestion__card--3">
+                </section>
+                <section class="suggestion__card suggestion__card--3">
                     <img class="suggestion__card__img" src="./assets/card3.png" alt="card3">
                     <h3 class="suggestion__card__title">
                         Build Your Digital Product That Suitable For Your Need
@@ -83,12 +83,12 @@
                             Learn more
                         </a>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="client">
+    <section class="client">
         <div class="client__container">
             <div class="client__box">
                 <h2 class="client__title">
@@ -109,9 +109,9 @@
                 <div>More Client</div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="bottom">
+    <section class="bottom">
         <div class="bottom__wrapper">
             <div class="work">
                 <div class="work__container">
@@ -163,7 +163,7 @@
                 </div>
             </footer>
         </div>
-    </div>
+    </section>
 
     <div class="modal" id="modal">
         <div class="modal__overlay" id="overlay"></div>
