--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.
                 </p>
                 <div class="hero__btn">
-                    <a href="#" class="hero__btn__link">
+                    <a href="#" class="hero__btn-link">
                             See Our Project
                     </a>
                 </div>
@@ -121,7 +121,7 @@
                             <p class="work__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                         </div>
                         <div class="work__btn">
-                            <a href="#" id="modal-btn" class="work__btn__link">Let’s Talk</a>
+                            <a href="#" id="modal-btn" class="work__btn-link">Let’s Talk</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="footer__container">
                     <div class="footer__menu">
                         <div class="footer__afrianska">
-                            <h3 class="footer__afrianska__title">Afrianska</h3>
+                            <h3 class="footer__afrianska-title">Afrianska</h3>
                             <ul>
                                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                                 <li>+62-812-7313-4321</li>
@@ -139,7 +139,7 @@
                             </ul>
                         </div>
                         <div class="footer__about">
-                            <h3 class="footer__about__title">About US</h3>
+                            <h3 class="footer__about-title">About US</h3>
                             <ul>
                                 <li>About</li>
                                 <li>What We Do</li>
@@ -148,7 +148,7 @@
                             </ul>
                         </div>
                         <div class="footer__follow">
-                            <h3 class="footer__follow__title">Follow Us</h3>
+                            <h3 class="footer__follow-title">Follow Us</h3>
                             <ul>
                                 <li>Instagram</li>
                                 <li>Facebook</li>
