--- a/index.html
+++ b/index.html
@@ -42,43 +42,43 @@
         <div class="suggestion__container">
             <h2 class="suggestion__text">What we do to help our client grow in digital era</h2>
             <div class="suggestion__cards">
-                <section class="suggestion__card suggestion__card--1">
-                    <img class="suggestion__card__img" src="./assets/card1.png" alt="card1">
-                    <h3 class="suggestion__card__title">
+                <section class="suggestion__card suggestion-card">
+                    <img class="suggestion-card__img" src="./assets/card1.png" alt="card1">
+                    <h3 class="suggestion-card__title">
                         Make Your business To Be Better Famous In Internet
                     </h3>
-                    <p class="suggestion__card__text">
+                    <p class="suggestion-card__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     </p>
-                    <div class="suggestion__card__link">
+                    <div class="suggestion-card__link">
                         <a href="#">
                             Learn more
                         </a>
                     </div>
                 </section>
-                <section class="suggestion__card suggestion__card--2">
-                    <img class="suggestion__card__img" src="./assets/card2.png" alt="card2">
-                    <h3 class="suggestion__card__title">
+                <section class="suggestion__card suggestion-card">
+                    <img class="suggestion-card__img" src="./assets/card2.png" alt="card2">
+                    <h3 class="suggestion-card__title">
                         Bring Technology To Your Comfrotable Home
                     </h3>
-                    <p class="suggestion__card__text">
+                    <p class="suggestion-card__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     </p>
-                    <div class="suggestion__card__link">
+                    <div class="suggestion-card__link">
                         <a href="#">
                             Learn more
                         </a>
                     </div>
                 </section>
-                <section class="suggestion__card suggestion__card--3">
-                    <img class="suggestion__card__img" src="./assets/card3.png" alt="card3">
-                    <h3 class="suggestion__card__title">
+                <section class="suggestion__card suggestion-card">
+                    <img class="suggestion-card__img" src="./assets/card3.png" alt="card3">
+                    <h3 class="suggestion-card__title">
                         Build Your Digital Product That Suitable For Your Need
                     </h3>
-                    <p class="suggestion__card__text">
+                    <p class="suggestion-card__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     </p>
-                    <div class="suggestion__card__link">
+                    <div class="suggestion-card__link">
                         <a href="#">
                             Learn more
                         </a>
