Сделала рефакторинг стилей

--- a/index.html
+++ b/index.html
@@ -176,17 +176,17 @@
                     </div>
                     <form action="index.html" method="post" id="form">
                         <div class="form__input">
-                            <div class="form__input__item">
+                            <div class="form__input-item">
                                 <label for="username" class="form__label"> Full Name</label>
                                 <input type="text" validate name="username" placeholder="Your Name" id="username">
                                 <div class="form__error">Заполните поле!</div>
                             </div>
-                            <div class="form__input__item">
+                            <div class="form__input-item">
                                 <label for="email" class="form__label"> Email</label>
                                 <input type="text" validate name="telephone" placeholder="Номер телефона" id="tel">
                                 <div class="form__error">Заполните поле!</div>
                             </div>
-                            <div class="form__input__item">
+                            <div class="form__input-item">
                                 <label for="message" class="form__label"> Message</label>
                                 <textarea rows="7" validate name="message" id="message" placeholder="Your Message"></textarea>
                                 <div class="form__error">Заполните поле!</div>
